--- a/projet/api/config/packages/api_platform.yaml
+++ b/projet/api/config/packages/api_platform.yaml
@@ -9,3 +9,6 @@ api_platform:
             apiKey:
                 name: Authorization
                 type: header
+    enable_swagger_ui: true
+    enable_re_doc: true
+    enable_docs: true
