--- a/projet/api/config/packages/doctrine.yaml
+++ b/projet/api/config/packages/doctrine.yaml
@@ -3,6 +3,8 @@ doctrine:
         url: '%env(resolve:DATABASE_URL)%'
         types:
             uuid:  Ramsey\Uuid\Doctrine\UuidType
+        mapping_types:
+            enum: string
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
