--- a/projet/api/composer.json
+++ b/projet/api/composer.json
@@ -22,6 +22,9 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "fzaninotto/faker": "^1.9",
+        "phpstan/extension-installer": "^1.0",
+        "phpstan/phpstan": "^0.12.18",
+        "phpstan/phpstan-doctrine": "^0.12.10",
         "symfony/maker-bundle": "^1.14"
     },
     "config": {
