--- a/projet/docker-compose.yml
+++ b/projet/docker-compose.yml
@@ -31,6 +31,7 @@ services:
             - 5050:8080
         volumes:
             - ./front/app/src:/app/src
+            - ./front/app/public:/app/public
             - ./front/app/node_modules:/app/src/node_modules
     php:
         container_name: reucopro_php
