--- a/projet/front/app/package.json
+++ b/projet/front/app/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.8.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.10.1",
     "component-install": "^1.0.1",
     "core-js": "^3.6.4",
+    "node-sass": "^4.13.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "toastr": "^2.1.4",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "sass-loader": "^7.3.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
