--- a/projet/api_bo/config/packages/security.yaml
+++ b/projet/api_bo/config/packages/security.yaml
@@ -17,7 +17,7 @@ security:
             stateless: true
             anonymous: true
         login:
-            pattern:  ^/api/login
+            pattern:  ^/api/login_check
             stateless: true
             anonymous: true
             provider: user_admin
@@ -41,6 +41,12 @@ security:
             logout:
                 path: bo_logout
                 target: bo_login
+
+    role_hierarchy:
+        ROLE_USER:  []
+        ROLE_SYNDIC:  [ROLE_USER]
+        ROLE_ADMIN: [ROLE_SYNDIC, ROLE_USER]
+        ROLE_DEV: [ROLE_ADMIN, ROLE_SYNDIC, ROLE_USER]
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
