--- a/projet/api_bo/config/services.yaml
+++ b/projet/api_bo/config/services.yaml
@@ -36,4 +36,23 @@ services:
         arguments: ['@App\Swagger\SwaggerDecorator.inner']
         autoconfigure: false
 
+    acme_api.event.jwt_created_listener:
+        class: App\Core\EventListener\JWTListener
+        arguments: [ '@request_stack' ]
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
 
+    acme_api.event.jwt_decoded_listener:
+        class: App\Core\EventListener\JWTListener
+        arguments: [ '@request_stack' ]
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_decoded, method: onJWTDecoded }
+
+    acme_api.event.authentication_success_listener:
+        arguments: ['%lexik_jwt_authentication.token_ttl%']
+        class: App\Core\EventListener\JWTListener
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_success, method: onAuthenticationSuccessResponse }
+
+    App\Core\EventSubscriber\RefreshTokenSubscriber:
+        arguments: ['%gesdinet_jwt_refresh_token.ttl%']
