--- a/projet/api_bo/.env
+++ b/projet/api_bo/.env
@@ -42,5 +42,5 @@ JWT_PASSPHRASE=reucopro
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=smtp://mailcatcher:25
+MAILER_URL=gmail://reucopro.mailer@gmail.com:reucopro2019@localhost
 ###< symfony/swiftmailer-bundle ###
