--- a/projet/api_bo/composer.json
+++ b/projet/api_bo/composer.json
@@ -18,6 +18,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/monolog-bundle": "^3.5",
         "symfony/swiftmailer-bundle": "^3.4",
         "symfony/translation": "5.0.*",
         "symfony/yaml": "5.0.*",
