--- a/projet/api_bo/composer.json
+++ b/projet/api_bo/composer.json
@@ -13,6 +13,7 @@
         "lexik/jwt-authentication-bundle": "^2.6",
         "ramsey/uuid": "^4.0",
         "ramsey/uuid-doctrine": "^1.6",
+        "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
@@ -21,6 +22,7 @@
         "symfony/monolog-bundle": "^3.5",
         "symfony/swiftmailer-bundle": "^3.4",
         "symfony/translation": "5.0.*",
+        "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.0.*",
         "twig/twig": "^3.0"
     },
