Controller pour les pages de gestion utilisateur en cours de création + ajout de webpack pour bootstrap

--- a/projet/api_bo/.gitignore
+++ b/projet/api_bo/.gitignore
@@ -15,6 +15,13 @@
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
 
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
+
 ###> symfony/phpunit-bridge ###
 .phpunit
 .phpunit.result.cache
@@ -36,4 +43,3 @@
 !bin/console
 !bin/symfony_requirements
 /vendor/
-
