--- a/projet/api_bo/composer.json
+++ b/projet/api_bo/composer.json
@@ -10,6 +10,7 @@
         "doctrine/doctrine-migrations-bundle": "^2.1",
         "doctrine/orm": "^2.7",
         "gesdinet/jwt-refresh-token-bundle": "^0.9.1",
+        "knplabs/knp-paginator-bundle": "^5.1",
         "lexik/jwt-authentication-bundle": "^2.6",
         "ramsey/uuid": "^4.0",
         "ramsey/uuid-doctrine": "^1.6",
