--- a/projet/api_bo/config/services.yaml
+++ b/projet/api_bo/config/services.yaml
@@ -30,7 +30,7 @@ services:
     App\Controller\BO\UsersController:
         tags: ['controller.service_arguments']
         arguments:
-          ['@user.repository', '@translator']
+          ['@user.repository', '@translator', '@knp_paginator']
 
     App\Controller\API\:
         resource: '../src/Controller/API'
@@ -40,6 +40,7 @@ services:
         decorates: 'api_platform.swagger.normalizer.documentation'
         arguments: ['@App\Swagger\SwaggerDecorator.inner']
         autoconfigure: false
+
     user.repository:
         class: App\Repository\UserRepository
         factory: ["@doctrine", getRepository]
