--- a/projet/api_bo/package.json
+++ b/projet/api_bo/package.json
@@ -1,11 +1,22 @@
 {
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@symfony/webpack-encore": "^0.28.2",
     "node-sass": "^4.13.1",
     "sass-loader": "^7.3.1",
-    "webpack-notifier": "^1.8.0"
+    "webpack-notifier": "^1.8.0",
+    "bootstrap": "^4.4.1",
+    "bootstrap-select": "^1.13.12",
+    "core-js": "^3.6.4",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@symfony/webpack-encore": "^0.28.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^7.3.1",
+    "webpack-notifier": "^1.8.0",
     "bootstrap": "^4.4.1",
     "bootstrap-select": "^1.13.12",
     "core-js": "^3.6.4",
