* Ajout de la suppression + edition en cours * Ajout de la pagination sur la liste users

--- a/projet/api_bo/config/services.yaml
+++ b/projet/api_bo/config/services.yaml
@@ -30,7 +30,7 @@ services:
     App\Controller\BO\UsersController:
         tags: ['controller.service_arguments']
         arguments:
-          ['@user.repository', '@translator']
+          ['@user.repository', '@translator', '@knp_paginator']
 
     App\Controller\API\:
         resource: '../src/Controller/API'
