--- a/projet/api_bo/composer.json
+++ b/projet/api_bo/composer.json
@@ -13,11 +13,13 @@
         "lexik/jwt-authentication-bundle": "^2.6",
         "ramsey/uuid": "^4.0",
         "ramsey/uuid-doctrine": "^1.6",
+        "symfony/browser-kit": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/http-client": "5.0.*",
         "symfony/monolog-bundle": "^3.5",
         "symfony/swiftmailer-bundle": "^3.4",
         "symfony/translation": "5.0.*",
@@ -25,12 +27,14 @@
         "twig/twig": "^3.0"
     },
     "require-dev": {
+        "ext-json": "*",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "fzaninotto/faker": "^1.9",
         "phpstan/extension-installer": "^1.0",
         "phpstan/phpstan": "^0.12.18",
         "phpstan/phpstan-doctrine": "^0.12.10",
         "symfony/maker-bundle": "^1.14",
+        "symfony/phpunit-bridge": "^5.0",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
