Add missing directory + entries in composer.json

--- a/projet/api_bo/config/services.yaml
+++ b/projet/api_bo/config/services.yaml
@@ -27,14 +27,14 @@ services:
         resource: '../src/Controller/BO'
         tags: ['controller.service_arguments']
 
+#    App\Controller\API\:
+#        resource: '../src/Controller/API'
+#        tags: ['controller.service_arguments']
+
     App\Controller\BO\UsersController:
         tags: ['controller.service_arguments']
         arguments:
           ['@user.repository', '@translator', '@knp_paginator']
-
-    App\Controller\API\:
-        resource: '../src/Controller/API'
-        tags: ['controller.service_arguments']
 
     App\Swagger\SwaggerDecorator:
         decorates: 'api_platform.swagger.normalizer.documentation'
