--- a/projet/api_bo/composer.json
+++ b/projet/api_bo/composer.json
@@ -27,7 +27,9 @@
         "symfony/translation": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.0.*",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "symfony/webpack-encore-bundle": "^1.7",
+        "knplabs/knp-paginator-bundle": "^5.1"
     },
     "require-dev": {
         "ext-json": "*",
