--- a/projet/api_bo/config/services.yaml
+++ b/projet/api_bo/config/services.yaml
@@ -27,9 +27,9 @@ services:
         resource: '../src/Controller/BO'
         tags: ['controller.service_arguments']
 
-    App\Controller\API\:
-        resource: '../src/Controller/API'
-        tags: ['controller.service_arguments']
+#    App\Controller\API\:
+#        resource: '../src/Controller/API'
+#        tags: ['controller.service_arguments']
 
     App\Swagger\SwaggerDecorator:
         decorates: 'api_platform.swagger.normalizer.documentation'
